--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,45 +18,6 @@ body {
 		margin: 0;
 }
 
-/* BUTTON STYLING */
-
-.signup-button {
-	position: fixed;
-	width: 8%;
-	left: 90%;
-	top: 87%;
-	color: black;
-	font-family: coolTitle;
-	font-size: 1.2em;
-	font-weight: bold;
-	z-index: 1000;
-}
-
-.cursor {
-	cursor: pointer;
-}
-/* VIDEO STYLING */
-
-.videoFrame {
-	position: absolute;
-	padding: 0;
-	display: block;
-	width: 100%;
-	height: 100%;
-}
-
-.video{
-	position: absolute;
-	padding: 0;
-	display: block;
-	width: 65%;
-	height: 65%;
-	top: 150%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-}
-
-/* SHOWCASE STYLING */
 @font-face {
     font-family: coolSans;
     src: url("../fonts/Oranienbaum.ttf");
@@ -67,105 +28,255 @@ body {
     src: url("../fonts/Ailerons-Typeface.otf");
 }
 
-.showiphone {
-	position: absolute;
+/* TIMELINE STYLING */
+.timeLine{
+	position: relative;
+	width: 100%;
+	height: 70vh;
 	display: block;
-	width: 50%;
-	height: 80%;
-	left: 50%;
-	top: 20%;
-	background: #616161;
+	margin-top: 5vh;
+	background: white;
 }
 
-.iphone {
+.processTitle {
 	position: absolute;
-	height: 80%;
+	display: block;
+	font-size: 4.2vw;
+	font-family: capsula;
+	text-align: center;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 30%;
+	margin: auto;
+	top: 15%;
+}
+
+
+#spineContainer {
+	position: absolute;
+	display: block;
+	width: 100%;
+	top: 50%;
+	height: 50%;
+	transform: translateY(-50%);
+}
+
+
+.buttonContainer{
+	position: relative;
+	display: inline-block;
+	width: 17%;
+	margin-left: 1.5%;
+	margin-right: 1.5%;
+	height: 100%;
+}
+
+#spine{
+	position: relative;
+	left: 50%;
+	width: 80%;
+	height: 1px;
+	background: black;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	z-index: 1;
+}
+
+.button {
+	position: absolute;
+	display: block;
+	width: 40%;
+	height: 50%;
+	border-radius: 100%; 
+	border: 1px solid black;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	background: white;
+	z-index: 100;
+}
+
+.buttonImage{
+	position: absolute;
+	display: block;
+	width: 80%;
+	height: 60%;
+	border-radius: 100%;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
 }
 
-.showcase {
+.buttonText{
+	position: absolute;
+	top: 85%;
+	left: 50%;
+	transform: translateX(-50%);
+	font-family: capsula;
+	opacity: 0;
+	font-size: 1.9vw;
+}
+
+
+.buttonExplanation{
+	position: absolute;
+	top: 85%;
+	left: 50%;
+	transform: translateX(-50%);
+	font-family: capsula;
+	opacity: 0;
+	font-size: 1.9vw;
+}
+
+.cursor{
+	cursor: pointer;
+	width: 52%;
+	height: 65%;
+}
+
+.noShow{
+	opacity: 1;
+}
+/* ABOUT PAGE STYLING */
+
+@font-face {
+    font-family: aargh;
+    src: url("../fonts/Aaargh.ttf");
+}
+
+@font-face {
+    font-family: capsula;
+    src: url("../fonts/Capsuula.ttf");
+}
+
+.aboutContainer {
+	position: relative;
+	height: 70vh;
+	margin-top: 10vh;
+	background: white;
+	z-index: 100;
+}
+
+
+.indexContainer {
+	position: relative;
+	height: 70vh;
+	margin-top: 10vh;
+	z-index: 100;
+}
+
+.aboutTitle {
 	position: absolute;
 	display: block;
-	width: 50%;
-	height: 100%;
-	background: #616161;
+	font-size: 4.2vw;
+	font-family: capsula;
+	text-align: center;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 30%;
+	margin: auto;
+	top: 15%;
 }
 
 
-.title {
-	font-size: 6em;
-	font-family: coolTitle;
-	width: 50%;
-	color: #ECEFF1;
-}
-
-.tagline {
-	font-size: 2em;
-	font-family: coolTitle;
-	color: #ECEFF1;
-}
-
-.text {
+.aboutDescription {
 	position: absolute;
+	font-size: 2.2vw;
+	font-family: capsula;
 	left: 10%;
 	width: 80%;
-	top: 50%;
-	transform: translateY(-50%);
+	top: 30%;
+	font-weight: bold;
 }
 
-/*IDENTITY STYLING */
-
-.Identity{
-	position: relative;
+.indexTitle {
+	position: absolute;
 	display: block;
+	font-size: 4.2vw;
+	font-family: capsula;
+	text-align: center;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 30%;
+	margin: auto;
+	top: 15%;
+}
+
+
+.indexDescription {
+	position: absolute;
+	font-size: 2.2vw;
+	font-family: capsula;
+	left: 10%;
+	width: 80%;
+	top: 30%;
+	font-weight: bold;
+}
+
+/* BACKGROUND STYLING */
+
+.home {
+	position: relative;
 	width: 100%;
-	height: 50%;
-	border: 1px solid orange;
+	height: 100%;
 }
 
-.card {
+.bg-container{
 	position: relative;
-	display: inline-block;
-	margin: 4%;
-	width: 40%;
+	width: 100vw;
+	height: 100vh;
+	margin: 0px;
 }
 
-.icon {
-	position: relative;
-	display: block;
-	width: 12%;
-	left: 40%;
-	margin-bottom: 3%;
+.bg-image{
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	opacity: 0.4;
 }
 
-.head {
-	position: relative;
-	display: block;
-	font-size: 2.5em;
-	font-family: coolSans;
-	left: 27%;
-	margin-bottom: 3%;
+.home {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
 }
 
-.content {
-	position: relative;
-	width: 60%;
-	left: 20%;
-	font-size: 1.3em;
-	font-family: coolSans;
+.title{
+	position: absolute;
+	font-family: coolTitle;
+	font-size: 7vw;
+	top: 40%;
+	left: 30%;
+	transform: translateX(-50%);
+	transform: translateY(-50%);
+	z-index: 1000;
 }
 
+.tagline{
+	position: absolute;
+	font-family: coolTitle;
+	font-size: 3.5vw;
+	left: 10%;
+	width: 80%;
+	top: 60%;
+	transform: translateX(-50%);
+	transform: translateY(-50%);
+	text-align: center;
+	z-index: 1000;
+}
 
 /* NAVBAR styling */
 
 .navwrapper{
 	position: fixed;
-	width: 100%;
-	height: 20%;
-	background: #616161;
+	width: 100vw;
+	height: 20vh;
 	z-index: 10000;
+}
+
+.navScroll {
+	background: #AED581;	
+	height: 15vh;
 }
 
 .navlogo {
@@ -197,72 +308,11 @@ body {
   margin-right: 2%;
   font-style: coolSans;
   color: black;
-  font-size:1.5em;
+  font-size:1.8vw;
 }
 
 .navbar-item {
 	text-decoration: none;
 	font-family: coolTitle;
-	color: white;
-}
-
-/* TEAMPAGE STYLING */
-
-.teamBox{
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 80%;
-	top: 200%;
-}
-
-.teamTitle{
-	position: absolute;
-	display: block;
-	font-size: 6em;
-	font-family: coolTitle;
-	height: 20%;
-	width: 40%;
-	left: 50%;
-	top: 20%;
-	transform: translateX(-50%);
-}
-
-.allMembers {
-	position: absolute;
-	width: 90%;
-	height: 60%;
-	top: 70%;
-	left: 63%;
-	transform: translateX(-50%);
-}
-
-.member {
-	display: inline-block;
-	width: 23%;
-	height: 80%;
-	top: 50%;
-	transform: translateY(-50%);
-}
-
-
-.headshot {
-	position: absolute;
-	width: 80%;
-	height: 90%;
-	left: 50%;
-	transform: translateX(-50%);
-	border-radius: 100%;
-	z-index: 100;
-}
-
-.dark {
-	position: absolute;
-	font-family: coolSans;
-	font-size: 1.3em;
-	width: 70%;
-	left: 50%;
-	top: 50%;
-	transform: translate(-30%, -50%);
-
+	color: black;
 }
